--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
     "description": "Helps to grade stuff in Ed",
     "content_scripts": [
         {
-            "matches": ["<all_urls>"],
+            "matches": ["https://edstem.org/*"],
             "js": ["content.js"],
             "run_at": "document_idle"
         }
@@ -14,7 +14,8 @@
       "default_popup": "popup.html",
       "default_icon": "icon.png"
     },
-    "permissions": ["storage"],
+    "permissions": ["storage", "scripting", "activeTab"],
+    "host_permissions": ["https://edstem.org/*"],
     "background": {
       "service_worker": "background.js"
     }
