--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "marked": "^15.0.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
