--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
     "build:content": "esbuild src/content/content.ts --bundle --outfile=dist/content.js --loader:.ts=ts --minify",
     "build:background": "esbuild src/background/background.ts --bundle --outfile=dist/background.js --loader:.ts=ts --minify",
     "copy:static": "node scripts/copyStatic.js",
+
+    "watch:popup": "esbuild src/popup/index.tsx --bundle --outfile=dist/popup.bundle.js --loader:.ts=ts --loader:.tsx=tsx --watch",
+    "watch:content": "esbuild src/content/content.ts --bundle --outfile=dist/content.js --loader:.ts=ts --watch",
+    "watch:background": "esbuild src/background/background.ts --bundle --outfile=dist/background.js --loader:.ts=ts --watch",
+
+    "dev": "npm-run-all --parallel watch:* copy:static",
     "build": "npm run build:popup && npm run build:content && npm run build:background && npm run copy:static"
   },
+
   "keywords": [],
   "author": "Your Name",
   "license": "MIT",
@@ -19,6 +26,7 @@
     "@types/react-dom": "^18.2.7",
     "cpy": "^11.1.0",
     "esbuild": "^0.25.2",
+    "npm-run-all": "^4.1.5",
     "typescript": "^5.3.3"
   },
   "dependencies": {
